--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,6 +12,8 @@ steps:
 
 - bash: |
     echo $(date +%Y)
+    whoami
+    pwd
     echo '##vso[task.setvariable variable=buildName]$(date +%Y)_$(date +%m)_$(Build.BuildNumber)_v3.7'
 
 - bash: |
